# HoloLithPlana

./: .gitignore  CMakeLists.txt  README.md  oldsrc.7z
oldsrc/: hlp_core.cc  hlp_core.hh  hlp_gamelogic.cc  hlp_gamelogic.hh  hlp_input.cc  hlp_input.hh  hlp_rendering.cc  hlp_rendering.hh  hlp_resourceloader.cc  hlp_resourceloader.hh  hlp_util.cc  hlp_util.hh  hlp_windows.cc  hlp_windows.hh  main.cc
resources/geometry/: Bunny.txt  Lucy.txt  OctoCat.txt  ghost_90_pcl.txt  ghost_non_pcl.txt  ghost_pcl.txt
resources/shaders/: shaders.hlsl
src/hlp/: hlp_declarations.hh  hlp_defines.hh  hlp_geometry.cc  hlp_geometry.hh  hlp_math.cc  hlp_math.hh  hlp_state.hh  main.cc
src/hlp/app/: hlp_app.cc  hlp_app.hh  hlp_init.hh  hlp_logic.cc  hlp_logic.hh  hlp_resource.cc  hlp_resource.hh  hlp_util.cc  hlp_util.hh  hlp_window.cc  hlp_window.hh
src/hlp/render/: hlp_d3d.cc  hlp_d3d.hh  hlp_d3d11.cc  hlp_d3d11.hh  hlp_d3d12.cc  hlp_d3d12.hh  hlp_imgui.cc  hlp_imgui.hh  hlp_render.cc  hlp_render.hh
